<resources>
    <string name="app_name">Aston_intensiv_3</string>
    <string name="menu_clear">Clear</string>
    <string name="contacts">Contacts</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <integer name="default_id">0</integer>
    <string name="default_firstName">First Name</string>
    <string name="default_lastName">Last Name</string>
    <string name="default_phoneNumber">Phone Number</string>
    <string name="editcontactfragment">EditContactFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>